--- a/index.html
+++ b/index.html
@@ -12,10 +12,36 @@
 
 <body>
     <header>
-        <h1 class="text-5xl text-center bg-cyan-800 py-6 text-white">Money Master <span class="text-yellow-300"><i
-                    class="fa-solid fa-sack-dollar"></i></span>
+        <h1 class="text-5xl w-3/4 mx-auto text-center bg-cyan-800 py-6 text-white font-bold">Money Master <span
+                class="text-yellow-300"><i class="fa-solid fa-sack-dollar"></i></span>
         </h1>
     </header>
+    <main>
+        <section>
+            <div class="text-center bg-pink-200 w-3/4 mx-auto py-6">
+                <h2 class="text-4xl font-medium  mt-8">Enter Your Income</h2>
+                <input type="text" name="" id="income-field" class="mt-8 px-6 py-4 w-1/6"
+                    placeholder="please Enter your income">
+                <h2 class="text-4xl font-medium  mt-8">Enter Your Expenses</h2>
+                <p class="text-3xl font-medium ml-3">Food: <input type="text" name="" id="income-field"
+                        class="mt-8 px-6 py-3 w-1/6 mx-6"></p>
+                <p class="text-3xl font-medium ml-3">Rent: <input type="text" name="" id="income-field"
+                        class="mt-8 px-6 py-3 w-1/6 mx-6"></p>
+                <p class="text-3xl font-medium mr-6">Clothes: <input type="text" name="" id="income-field"
+                        class="mt-8 px-6 py-3 w-1/6 "></p>
+                <button
+                    class="bg-blue-800 hover:bg-blue-400 mt-6 px-6 w-1/6 text-white text-4xl font-bold rounded-lg text-center py-4 mx-auto">Calculate</button>
+                <p class="text-3xl font-medium mr-6 mt-6">Total Expenses: <span>4500</span></p>
+                <p class="text-3xl font-medium mr-6 mt-6">Balance: <span>4500</span></p>
+                <p class="text-3xl font-medium mx-8">Save: <input type="text" name="" id="income-field"
+                        class="mt-8 px-6 py-3 w-1/6  mx-8"> <span class="text-4xl font-semibold">%</span> <button
+                        class="bg-blue-800 hover:bg-blue-400 mt-6 px-6 w-1/6 text-white text-4xl font-bold rounded-lg text-center py-4 mx-auto mx-8">Calculate</button>
+                </p>
+                <p class="text-3xl font-medium mr-6 mt-6">Saving Amount: <span>2000</span></p>
+                <p class="text-3xl font-medium mr-6 mt-6">Remaining Balaqnce: <span>2500</span></p>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
