changed input field width

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <section>
             <div class="text-center bg-pink-200 w-3/4 mx-auto py-6">
                 <h2 class="text-4xl font-medium  mt-8">Enter Your Income</h2>
-                <input type="text" name="" id="income-field" class="mt-8 px-6 py-4 w-1/6"
+                <input type="text" name="" id="income-field" class="mt-8 px-6 py-4 w-2/5 text-3xl"
                     placeholder="please Enter your income">
                 <h2 class="text-4xl font-medium  mt-8">Enter Your Expenses</h2>
                 <p class="text-3xl font-medium ml-3">Food: <input type="text" name="" id="income-field"
