--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
                 <p class="text-3xl font-medium mr-6">Clothes: <input type="text" name="" id="income-field"
                         class="mt-8 px-6 py-3 w-1/4 "></p>
                 <button
-                    class="bg-blue-800 hover:bg-blue-400 mt-6 px-6 w-1/6 text-white text-4xl font-bold rounded-lg text-center py-4 mx-auto">Calculate</button>
+                    class="bg-cyan-800 hover:bg-cyan-400 mt-6 px-6 w-1/6 text-white text-4xl font-bold rounded-lg text-center py-4 mx-auto">Calculate</button>
                 <p class="text-3xl font-medium mr-6 mt-6">Total Expenses: <span>4500</span></p>
                 <p class="text-3xl font-medium mr-6 mt-6">Balance: <span>4500</span></p>
                 <p class="text-3xl font-medium mx-8">Save: <input type="text" name="" id="income-field"
                         class="mt-8 px-6 py-3 w-1/6  mx-8"> <span class="text-4xl font-semibold">%</span> <button
-                        class="bg-blue-800 hover:bg-blue-400 mt-6 px-6 w-1/6 text-white text-4xl font-bold rounded-lg text-center py-4 mx-auto mx-8">Calculate</button>
+                        class="bg-cyan-800 hover:bg-cyan-400 mt-6 px-6 w-1/6 text-white text-4xl font-bold rounded-lg text-center py-4 mx-auto mx-8">Calculate</button>
                 </p>
                 <p class="text-3xl font-medium mr-6 mt-6">Saving Amount: <span>2000</span></p>
                 <p class="text-3xl font-medium mr-6 mt-6">Remaining Balaqnce: <span>2500</span></p>
