balance calculation added

--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
                 <input type="text" name="" id="income-field" class="mt-8 px-6 py-4 w-2/5 text-3xl"
                     placeholder="please Enter your income">
                 <h2 class="text-4xl font-medium  mt-8">Enter Your Expenses</h2>
-                <p class="text-3xl font-medium ml-3">Food: <input type="text" name="" id="income-field"
+                <p class="text-3xl font-medium ml-3">Food: <input type="text" name="" id="food-field"
                         class="mt-8 px-6 py-3 w-1/4 mx-6"></p>
-                <p class="text-3xl font-medium ml-3">Rent: <input type="text" name="" id="income-field"
+                <p class="text-3xl font-medium ml-3">Rent: <input type="text" name="" id="rent-field"
                         class="mt-8 px-6 py-3 w-1/4 mx-6"></p>
-                <p class="text-3xl font-medium mr-6">Clothes: <input type="text" name="" id="income-field"
+                <p class="text-3xl font-medium mr-6">Clothes: <input type="text" name="" id="clothes-filed"
                         class="mt-8 px-6 py-3 w-1/4 "></p>
-                <button
+                <button id="btn-canculate"
                     class="bg-cyan-800 hover:bg-cyan-400 mt-6 px-6 w-1/6 text-white text-4xl font-bold rounded-lg text-center py-4 mx-auto">Calculate</button>
-                <p class="text-3xl font-medium mr-6 mt-6">Total Expenses: <span>4500</span></p>
-                <p class="text-3xl font-medium mr-6 mt-6">Balance: <span>4500</span></p>
-                <p class="text-3xl font-medium mx-8">Save: <input type="text" name="" id="income-field"
+                <p class="text-3xl font-medium mr-6 mt-6">Total Expenses: <span id="total-expense-field">4500</span></p>
+                <p class="text-3xl font-medium mr-6 mt-6">Balance: <span id="balance-total-field">4500</span></p>
+                <p class="text-3xl font-medium mx-8">Save: <input type="text" name="" id=""
                         class="mt-8 px-6 py-3 w-1/6  mx-8"> <span class="text-4xl font-semibold">%</span> <button
                         class="bg-cyan-800 hover:bg-cyan-400 mt-6 px-6 w-1/6 text-white text-4xl font-bold rounded-lg text-center py-4 mx-auto mx-8">Calculate</button>
                 </p>
@@ -42,6 +42,7 @@
             </div>
         </section>
     </main>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
