saving ammount calculate

--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@
                     class="bg-cyan-800 hover:bg-cyan-400 mt-6 px-6 w-1/6 text-white text-4xl font-bold rounded-lg text-center py-4 mx-auto">Calculate</button>
                 <p class="text-3xl font-medium mr-6 mt-6">Total Expenses: <span id="total-expense-field">4500</span></p>
                 <p class="text-3xl font-medium mr-6 mt-6">Balance: <span id="balance-total-field">4500</span></p>
-                <p class="text-3xl font-medium mx-8">Save: <input type="text" name="" id=""
+                <p class="text-3xl font-medium mx-8">Save: <input type="text" name="" id="save-field"
                         class="mt-8 px-6 py-3 w-1/6  mx-8"> <span class="text-4xl font-semibold">%</span> <button
-                        class="bg-cyan-800 hover:bg-cyan-400 mt-6 px-6 w-1/6 text-white text-4xl font-bold rounded-lg text-center py-4 mx-auto mx-8">Calculate</button>
+                        class="bg-cyan-800 hover:bg-cyan-400 mt-6 px-6 w-1/6 text-white text-4xl font-bold rounded-lg text-center py-4 mx-auto mx-8"
+                        id="btn-save">Save</button>
                 </p>
-                <p class="text-3xl font-medium mr-6 mt-6">Saving Amount: <span>2000</span></p>
-                <p class="text-3xl font-medium mr-6 mt-6">Remaining Balaqnce: <span>2500</span></p>
+                <p class="text-3xl font-medium mr-6 mt-6">Saving Amount: <span id="save-amount">2000</span></p>
+                <p class="text-3xl font-medium mr-6 mt-6">Remaining Balaqnce: <span id="remaining-balance">2500</span>
+                </p>
             </div>
         </section>
     </main>
