edit remaining balance

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         id="btn-save">Save</button>
                 </p>
                 <p class="text-3xl font-medium mr-6 mt-6">Saving Amount: <span id="save-amount">2000</span></p>
-                <p class="text-3xl font-medium mr-6 mt-6">Remaining Balaqnce: <span id="remaining-balance">2500</span>
+                <p class="text-3xl font-medium mr-6 mt-6">Remaining Balance: <span id="remaining-balance">2500</span>
                 </p>
             </div>
         </section>
