--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 </head>
 
 <body>
-    <header>
+    <header class="sm:text-center">
         <h1 class="text-5xl w-3/4 mx-auto text-center bg-cyan-800 py-6 text-white font-bold">Money Master <span
                 class="text-yellow-300"><i class="fa-solid fa-sack-dollar"></i></span>
         </h1>
     </header>
     <main>
         <section>
-            <div class="text-center bg-pink-200 w-3/4 mx-auto py-6">
+            <div class="text-center bg-pink-200 w-3/4 mx-auto py-6 sm:text-center">
                 <h2 class="text-4xl font-medium  mt-8">Enter Your Income</h2>
                 <input type="text" name="" id="income-field" class="mt-8 px-6 py-4 w-2/5 text-2xl"
                     placeholder="please Enter your income">
@@ -30,7 +30,7 @@
                 <p class="text-3xl font-medium mr-6">Clothes: <input type="text" name="" id="clothes-filed"
                         class="mt-8 px-6 py-3 w-1/4 "></p>
                 <button id="btn-canculate"
-                    class="bg-cyan-800 hover:bg-cyan-400 mt-6 px-6 w-1/6 text-white text-2xl font-bold rounded-lg text-center py-4 mx-auto">Calculate</button>
+                    class="bg-cyan-800 hover:bg-cyan-400 sm:w-3/12 mt-6 px-6 w-1/6 text-white text-2xl font-bold rounded-lg text-center py-4 mx-auto">Calculate</button>
                 <p class="text-3xl font-medium mr-6 mt-6">Total Expenses: <span id="total-expense-field">4500</span></p>
                 <p class="text-3xl font-medium mr-6 mt-6">Balance: <span id="balance-total-field">4500</span></p>
                 <p class="text-3xl font-medium mx-8">Save: <input type="text" name="" id="save-field"
